agent/ds.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: grafana-agent
  namespace: agent
spec:
  minReadySeconds: 10
  selector:
    matchLabels:
      name: grafana-agent
  template:
    metadata:
      labels:
        name: grafana-agent
    spec:
      containers:
      - args:
        - -config.file=/etc/agent/agent.yaml
        - -config.expand-env
        command:
        - /bin/agent
        image: grafana/agent:v0.19.0
        imagePullPolicy: IfNotPresent
        name: agent
        ports:
          - containerPort: 9411
            name: zipkin
          - containerPort: 12345
            name: api
          - containerPort: 14268
            name: thrifthttp
        securityContext:
          privileged: true
          runAsUser: 0
        volumeMounts:
        - mountPath: /etc/agent
          name: grafana-agent-config
        - mountPath: /var/log
          name: varlog
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
      serviceAccount: grafana-agent
      tolerations:
      - effect: NoSchedule
        operator: Exists
      volumes:
      - configMap:
          name: grafana-agent-config
        name: grafana-agent-config
      - hostPath:
          path: /var/log
        name: varlog
      - hostPath:
          path: /var/lib/docker/containers
        name: varlibdockercontainers
  updateStrategy:
    type: RollingUpdate
