agent/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-agent
  namespace: agent
spec:
  ports:
    - name: thrift-compact
      port: 6831
      targetPort: thrift-compact
    - name: api
      port: 12345
  type: ClusterIP
  selector:
    name: grafana-agent
